<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.att.tsa.login.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_padding_16"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/layoutLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_48"
        android:layout_marginRight="@dimen/margin_padding_48"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:met_baseColor="@color/login_hint"
            app:met_underlineColor="@color/login_hint"
            app:met_primaryColor="@color/login_hint"
            app:met_textColorHint="@color/login_hint"
            app:met_textColor="@android:color/white"
            app:met_hideUnderline="false"
            android:inputType="textNoSuggestions"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="@dimen/margin_padding_8"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:met_baseColor="@color/login_hint"
            app:met_underlineColor="@color/login_hint"
            app:met_primaryColor="@color/login_hint"
            app:met_textColorHint="@color/login_hint"
            app:met_textColor="@android:color/white"
            app:met_hideUnderline="false"
            android:inputType="textNoSuggestions|textPassword"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="@dimen/margin_padding_8"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_24"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="false">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvTroubleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16"
            android:layout_gravity="center_horizontal"
            android:text="@string/trouble_sign_in"
            android:textColor="@color/login_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_48"
        android:layout_marginRight="@dimen/margin_padding_48"
        android:layout_marginTop="@dimen/margin_padding_24"
        android:layout_below="@id/layoutLoginForm"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvAttUsers"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/att_users_click_here"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>
